--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.4",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5"
   },
