--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "bingo-app",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://christiangoran.github.io/bingo-app-react/",
   "type": "module",
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -22,6 +24,7 @@
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
+    "@rollup/plugin-replace": "^3.1.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
@@ -35,5 +38,4 @@
     "tailwindcss": "^3.4.4",
     "vite": "^5.2.0"
   }
-  
 }
