--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "0.0.0",
   "homepage": "https://christiangoran.github.io/bingo-app-react/",
   "type": "module",
-
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -15,6 +14,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
